# function-template-python

./: .dockerignore  Dockerfile  README.md  init.sh  pyproject.toml
.github/workflows/: ci.yml
example/: README.md  composition.yaml  functions.yaml  xr.yaml
function/: __version__.py  fn.py  main.py
package/: crossplane.yaml
package/input/: template.fn.crossplane.io_inputs.yaml
tests/: test_fn.py
